Add saucelabs runner

--- a/test/test.html
+++ b/test/test.html
@@ -21,9 +21,29 @@
 
   <script>
     if (self.mochaPhantomJS) {
-      mochaPhantomJS.run()
+      mochaPhantomJS.run();
     } else {
-      mocha.run()
+      var runner = mocha.run();
+
+      var failedTests = [];
+
+      runner.on('end', function(){
+        window.mochaResults = runner.stats;
+        window.mochaResults.reports = failedTests;
+      });
+
+      runner.on('fail', function(test, err){
+        function flattenTitles(test){
+          var titles = [];
+          while (test.parent.title){
+            titles.push(test.parent.title);
+            test = test.parent;
+          }
+          return titles.reverse();
+        };
+
+        failedTests.push({name: test.title, result: false, message: err.message, stack: err.stack, titles: flattenTitles(test) });
+      });
     }
   </script>
 </body>
