:bug: Renamed self to window since we're in a browser environment (and want to support testing with jsdomify/jsdom)

--- a/test/test-worker.html
+++ b/test/test-worker.html
@@ -30,7 +30,7 @@
           })
           break
         case 'end':
-          if (self.mochaPhantomJS) {
+          if (window.mochaPhantomJS) {
             mochaPhantomJS.run()
           } else {
             mocha.run()
