--- a/test/test.html
+++ b/test/test.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>Fetch Tests</title>
-  <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
+  <link rel="stylesheet" href="/node_modules/mocha/mocha.css" />
 </head>
 <body>
   <div id="mocha"></div>
-  <script src="../node_modules/chai/chai.js"></script>
-  <script src="../node_modules/mocha/mocha.js"></script>
+  <script src="/node_modules/chai/chai.js"></script>
+  <script src="/node_modules/mocha/mocha.js"></script>
   <script>
     mocha.setup('tdd')
     self.assert = chai.assert
   </script>
 
-  <script src="../bower_components/es6-promise/promise.js"></script>
-  <script src="../fetch.js"></script>
-
-  <script src="test.js"></script>
+  <script src="/bower_components/es6-promise/promise.js"></script>
+  <script src="/test/test.js"></script>
+  <script src="/fetch.js"></script>
 
   <script>
     if (self.mochaPhantomJS) {
