--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <script>
-    var result = fetch('https://github.com')
+    var result = fetch('https://api.github.com')
 
     result.then(function(response) {
       console.log('response', response)
