Add caveat about redirect mode to gh-pages documentation

--- a/index.html
+++ b/index.html
@@ -245,3 +245,15 @@ More comprehensive usage example:
   }
 })</code></pre>
 </section>
+
+<section>
+  <h2 id="caveats">Caveats</h2>
+
+  <p>
+  <span class="name">fetch</span> isn't able to poly-fill the entire standard.
+  Some notable differences include:
+  </p>
+  <ul>
+    <li>Inability to <a href="https://github.com/github/fetch/issues/137">set the redirect mode</a></li>
+  </ul>
+</section>
