--- a/test/test-worker.html
+++ b/test/test-worker.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div id="mocha"></div>
+  <script src="/node_modules/url-search-params/build/url-search-params.js"></script>
   <script src="/node_modules/mocha/mocha.js"></script>
 
   <script>
