Fix "respose" typo

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ More comprehensive usage example:
     <li><code>formData()</code> - yields <a href="https://developer.mozilla.org/en-US/docs/Web/API/FormData">FormData</a> that can be forwarded to another request</li>
   </ul>
 
-  <h3>Other respose methods</h3>
+  <h3>Other response methods</h3>
 
   <ul>
     <li><code>clone()</code></li>
