--- a/test/test-worker.html
+++ b/test/test-worker.html
@@ -8,6 +8,7 @@
 <body>
   <div id="mocha"></div>
   <script src="/node_modules/url-search-params/build/url-search-params.js"></script>
+  <script src="/node_modules/web-streams-polyfill/dist/polyfill.min.js"></script>
   <script src="/node_modules/mocha/mocha.js"></script>
 
   <script>
