--- a/index.html
+++ b/index.html
@@ -293,10 +293,11 @@ More comprehensive usage example:
   <h2 id="caveats">Caveats</h2>
 
   <p>
-  <span class="name">fetch</span> isn't able to poly-fill the entire standard.
+  <span class="name">fetch</span> isn't able to polyfill the entire standard.
   Some notable differences include:
   </p>
   <ul>
     <li>Inability to <a href="https://github.com/github/fetch/issues/137">set the redirect mode</a></li>
+    <li>Inability to <a href="https://github.com/github/fetch/issues/438#issuecomment-261272466">change the cache directive</a></li>
   </ul>
 </section>
