Test signal reuse. Add AbortSignal polyfill.

--- a/test/test.html
+++ b/test/test.html
@@ -33,6 +33,7 @@
   </script>
 
   <script src="/node_modules/promise-polyfill/promise.js"></script>
+  <script src="/test/abortsignal-polyfill.js"></script>
   <script src="/test/test.js"></script>
   <script src="/fetch.js"></script>
 
