Build UMD dist file with Rollup

--- a/test/test.html
+++ b/test/test.html
@@ -34,7 +34,7 @@
 
   <script src="/node_modules/promise-polyfill/promise.js"></script>
   <script src="/test/test.js"></script>
-  <script src="/fetch.js"></script>
+  <script src="/dist/fetch.umd.js"></script>
 
   <script>
     var runner = mocha.run();
