Change `credentials` default to "same-origin"
4c5f2277532f2717255a84ab3f6dab2f488f72ac

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ More comprehensive usage example:
     <li><code>method</code> (String) - HTTP request method. Default: <code>"GET"</code></li>
     <li><code>body</code> (String, <a href="#request-body">body types</a>) - HTTP request body</li>
     <li><code>headers</code> (Object, <a href="#Headers">Headers</a>) - Default: <code>{}</code></li>
-    <li id="credentials"><code>credentials</code> (String) - Authentication credentials mode. Default: <code>"omit"</code>
+    <li id="credentials"><code>credentials</code> (String) - Authentication credentials mode. Default: <code>"same-origin"</code>
       <ul>
         <li><code>"omit"</code> - don't include authentication credentials (e.g. cookies) in the request</li>
         <li><code>"same-origin"</code> - include credentials in requests to the same site</li>
