--- a/test/test.html
+++ b/test/test.html
@@ -3,24 +3,21 @@
 <head>
   <meta charset="utf-8">
   <title>Fetch Tests</title>
-  <link rel="stylesheet" href="/node_modules/mocha/mocha.css" />
+  <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
 </head>
 <body>
   <div id="mocha"></div>
-  <script src="/node_modules/chai/chai.js"></script>
-  <script src="/node_modules/mocha/mocha.js"></script>
+  <script src="../node_modules/chai/chai.js"></script>
+  <script src="../node_modules/mocha/mocha.js"></script>
   <script>
-    if (self.mocha && mocha.setup) {
-      mocha.setup('tdd')
-      self.assert = chai.assert
-    } else {
-      document.write('<p>Error: please run <code>make</code> to install dependencies and try again.</p>')
-    }
+    mocha.setup('tdd')
+    self.assert = chai.assert
   </script>
 
-  <script src="/bower_components/es6-promise/promise.js"></script>
-  <script src="/test/test.js"></script>
-  <script src="/fetch.js"></script>
+  <script src="../bower_components/es6-promise/promise.js"></script>
+  <script src="../fetch.js"></script>
+
+  <script src="test.js"></script>
 
   <script>
     if (self.mochaPhantomJS) {
